[fix]: name overflow/missing

--- a/styles/controls.module.scss
+++ b/styles/controls.module.scss
@@ -426,6 +426,7 @@
   display: inline-flex;
   align-items: center;
   justify-content: flex-start;
+  cursor: pointer;
   & > span {
     margin-right: 4px;
     display: inline-flex;
